production/manifests/metabase/metabase.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metabase
  labels:
    name: metabase
---
apiVersion: v1
kind: Service
metadata:
  name: metabase-svc
  namespace: metabase
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: metabase-dep
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-dep
  namespace: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase-dep
  template:
    metadata:
      labels:
        app: metabase-dep
    spec:
      containers:
        - name: metabase
          image: metabase/metabase:v0.41.1
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "1024Mi"
          ports:
            - containerPort: 3000
