production/manifests/metabase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  namespace: metabase
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - metabase.warehousia.com
      secretName: metabase-tls
  rules:
  - host: metabase.warehousia.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: metabase-svc
              port:
                number: 80
